--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     ход сюжета и всё, что тебя окружает.</p>
             </div>
             <div class="info__img">
-                <img src="img/info_img/city_24.jpg" alt="city_24" class="info__img-moto-city_24">
+                <img src="img/info_img/city_24.jpg" alt="city_24" class="info__img-city_24">
                 <img src="img/info_img/moto.jpg" alt="moto" class="info__img-moto">
                 <img src="img/info_img/city.jpg" alt="city" class="info__img-city">
             </div>
@@ -78,11 +78,11 @@
                     </div>
                     <button>Отправить</button>
                     <div class="agreement">
-                        <input type="checkbox" required class="agreement__checkbox">
+                        <input type="checkbox" required>
                         Согласен на обработку персональных данных
                     </div>
                 </div>
-                <img src="img/xbox_ps.png" alt="xbox_ps" class="promo__img">
+                <div class="promo__img"></div>
             </div>
         </div>
     </section>
@@ -91,8 +91,7 @@
             <div class="monitor__wrapper">
                 <div class="monitor__img">
                     <img src="img/monitor_hp.png" alt="monitor" class="monitor_hp">
-                    <img src="icons/monitor_icons/hp_cyberpunk_logo.png" alt="hp_cyberpunk_logo"
-                        class="hp_cyberpunk_logo">
+                    <div class="hp_cyberpunk_logo"></div>
                 </div>
                 <div class="monitor__descr">
                     <h2>Полное погружение вместе с HP</h2>
