--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         или
                         <span>Sony PlayStation 5!</span>
                         Заполни форму ниже и
-                        приложи скриншот о покупке игры. Итоги розыгрыша будут подведены 1 февраля. Удачи! ;)
+                        приложи скриншот о покупке игры. Итоги розыгрыша будут подведены <br> 1 февраля. Удачи! ;)
                     </p>
                 </div>
                 <div class="promo__form">
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="monitor__wrapper">
                 <div class="monitor__img">
-                    <img src="img/monitor_hp.png" alt="monitor" class="monitor_hp">
+                    <img src="img/monitor_hp.png" alt="monitor" class="monitor__hp">
                     <div class="hp_cyberpunk_logo"></div>
                 </div>
                 <div class="monitor__descr">
@@ -154,8 +154,8 @@
         <div class="container">
             <div class="footer__top">
                 <div class="footer__logo">
-                    <img src="icons/cyberpunk_logo.png" alt="cyberpunk_logo">
-                    <img src="icons/cd_project_logo.svg" alt="cd_project_logo">
+                    <img src="icons/cyberpunk_logo.png" alt="cyberpunk_logo" class="cyberpunk_logo">
+                    <img src="icons/cd_project_logo.svg" alt="cd_project_logo" class="cd_project_logo">
                 </div>
                 <div class="footer__support">
                     <a href="#">Лицензия</a>
